<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="396dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.922">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button2"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="#FFFFFF"
                android:text="@string/clear"
                android:textSize="40sp"
                android:textColor="#FF3C00"/>

            <Button
                android:id="@+id/button5"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="#FDFDFD"
                android:text="@string/del"
                android:textSize="40sp"
                android:textColor="#FF3C00"/>

            <Button
                android:id="@+id/button3"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="#FFFFFF"
                android:text="@string/percent"
                android:textSize="40sp"
                android:textColor="#FF3C00"/>

            <Button
                android:id="@+id/button4"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="#FFFFFF"
                android:text="@string/div"
                android:textSize="55sp"
                android:textColor="#FF3C00"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button6"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="#FFFFFF"
                android:text="@string/seven"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button7"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="#FFFFFF"
                android:text="@string/eight"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button8"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="#FFFFFF"
                android:text="@string/nine"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button9"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="#FFFFFF"
                android:text="@string/mul"
                android:textSize="60sp"
                android:textColor="#FF3C00"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button10"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="#FFFFFF"
                android:text="@string/four"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button11"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="#FFFFFF"
                android:text="@string/five"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button12"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="#FFFFFF"
                android:text="@string/six"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button13"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="#FFFFFF"
                android:text="@string/sub"
                android:textSize="60sp"
                android:textColor="#FF3C00"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button14"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="#FFFFFF"
                android:text="@string/one"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button15"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="#FFFFFF"
                android:text="@string/two"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button16"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="#FFFFFF"
                android:text="@string/three"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button17"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="#FFFFFF"
                android:text="@string/add"
                android:textSize="50sp"
                android:textColor="#FF3C00"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button18"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="#FFFFFF"
                android:text="@string/clr"
                android:textSize="40sp"
                android:textColor="#FF3C00"/>

            <Button
                android:id="@+id/button19"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="#FFFFFF"
                android:text="@string/zero"
                android:textSize="40sp" />

            <Button
                android:id="@+id/button20"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="#FFFFFF"
                android:text="@string/dot"
                android:textSize="50sp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/button21"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:backgroundTint="#FFFFFF"
                android:text="@string/equal"
                android:textSize="45sp"
                android:textColor="#FF3C00"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="end"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="50sp"
        android:text="@string/zero"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="end" />
</android.support.constraint.ConstraintLayout>